# Seam_Carving

./: .gitignore  CMakeLists.txt  README.md
.history/: 1_20250525201330.py
src/: main.cpp  seam_carver.cpp  seam_carver.h
test_images/: images.jfif
